--- a/style.css
+++ b/style.css
@@ -3,15 +3,17 @@ header {
     color: black;
     padding: 20px;
     text-align: center;
-
 }
 section{
     margin:0 1.5cm;
     font-size: 16px;
     color: black;
+    background-color:bisque;
+    text-align: justify;
     }
+
 footer{
-    background-color:blue
+    background-color:blue;
     color: white;
     padding: 10px;
     text-align: center;
