--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 header {
-    background-color: blue;
+    background-color:cornflowerblue;
     color: black;
     padding: 30px;
     text-align: center;
@@ -14,7 +14,7 @@ section{
     }
 
 footer{
-    background-color:blue;
+    background-color:cornflowerblue;
     color: white;
     padding: 10px;
     text-align: center;
